charts/all/minio-config/templates/route-minio-api.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-api
spec:
  to:
    kind: Service
    name: myminio-h1
    weight: 100
  port:
    targetPort: http-minio
  tls:
    termination: edge
  wildcardPolicy: None
