charts/all/minio-config/templates/route-minio-console.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-console
spec:
  to:
    kind: Service
    name: myminio-console
    weight: 100
  port:
    targetPort: http-console
  tls:
    termination: edge
  wildcardPolicy: None
